--- a/index.html
+++ b/index.html
@@ -2,13 +2,47 @@
   <head>
     <title>OBS Visualizer</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="linearDevices.js" defer></script>
+    <script src="scalarDevices.js" defer></script>
+    <script src="main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/@robloche/chartjs-plugin-streaming@3.1.0"></script>
   </head>
   <body>
-    <div style="width: 2000px; height: 200px;"><canvas id="acquisitions"></canvas></div>
+    <h1>Strokers</h1>
+    <div style="width: 500px;" >
+      <canvas id="stroker">
+      </canvas>
+    </div>
+
+    <h1>Vibrators</h1>
+    <div class="graph-container">
+      <div style="width: 350px; height: 200px;" >
+        <canvas id="vibrator-anal">
+        </canvas>
+      </div>
+      
+      <div style="width: 350px; height: 200px;">
+        <canvas id="vibrator-vaginal">
+        </canvas>
+      </div>
+
+      <div class="expanding-div"></div>
+    </div>
+
+    <h1>Constrictors/Inflators</h1>
+    <div class="graph-container">
+      <div style="width: 350px; height: 200px;">
+        <canvas id="fake-constrictor-anal">
+        </canvas>
+      </div>    
+      <div style="width: 350px; height: 200px;">
+        <canvas id="fake-constrictor-vaginal">
+        </canvas>
+      </div>
+      <div class="expanding-div"></div>
+    </div>
   </body>
 </html>
