--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   <body>
     <h1>Strokers</h1>
     <div style="width: 500px;" >
-      <canvas id="stroker">
+      <canvas id="id0">
       </canvas>
     </div>
 
     <h1>Vibrators</h1>
     <div class="graph-container">
       <div style="width: 350px; height: 200px;" >
-        <canvas id="vibrator-anal">
+        <canvas id="id1">
         </canvas>
       </div>
       
       <div style="width: 350px; height: 200px;">
-        <canvas id="vibrator-vaginal">
+        <canvas id="id2">
         </canvas>
       </div>
 
@@ -35,11 +35,11 @@
     <h1>Constrictors/Inflators</h1>
     <div class="graph-container">
       <div style="width: 350px; height: 200px;">
-        <canvas id="fake-constrictor-anal">
+        <canvas id="id3">
         </canvas>
       </div>    
       <div style="width: 350px; height: 200px;">
-        <canvas id="fake-constrictor-vaginal">
+        <canvas id="id4">
         </canvas>
       </div>
       <div class="expanding-div"></div>
